@@ -1,3 +1,6 @@
+  * Check initializer for session settings
+  * Add --checks option to list checks
+
 ## 0.4.1
   
   * Fix reported line numbers when using new Erubis parser
